--- a/app/templates/src/index.html
+++ b/app/templates/src/index.html
@@ -12,7 +12,7 @@
     <div id="root"></div>
   
 	<script src="dist/commons.js"></script>  
-    <script src="dist/app.bundle.js"></script>
+    <script src="dist/index.bundle.js"></script>
     
   </body>
 
